[project]
name = "kingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "icalendar>=6.3.1",
    "lxml>=6.0.2",
    "pydantic>=2.11.9",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "stpyv8>=13.1.201.22",
]
